Fix panel menu on mobile

--- a/src/sass/components/_panel-bar.scss
+++ b/src/sass/components/_panel-bar.scss
@@ -92,7 +92,7 @@
   }
 }
 
-@media (max-width: 767px) {
+@include media-breakpoint-down(sm) {
   .panel-bar {
     .heading {
       margin-bottom: 20px;
@@ -103,7 +103,8 @@
     }
   }
 }
-@media (max-width: 470px) {
+
+@include media-breakpoint-down(xs) {
   .dots,
   .menu {
     display: none;
